fix gap

--- a/syle.css
+++ b/syle.css
@@ -39,13 +39,13 @@ header {
 
 .download{
     display: flex;
-    gap: 42px;
+    gap: 24px;
     margin-top: 18px;
 }
 a{
     background-color: aqua;
-    padding: 10px 18px;
-    border-radius: 18px;
+    padding: 14px 24px;
+    border-radius: 24px;
     text-decoration: none;
 
 }
